--- a/2020-07-21_Australian-Pets/code/Beltz_Tidy-Tuesday_2020-07-21_Australian-Pets.Rmd
+++ b/2020-07-21_Australian-Pets/code/Beltz_Tidy-Tuesday_2020-07-21_Australian-Pets.Rmd
@@ -14,6 +14,7 @@ Load packages
 
 ```{r}
 #load packages
+library(here)
 library(tidyverse) 
 library(tidytuesdayR)
 library(viridis)
@@ -128,7 +129,17 @@ p3 <- p2 + scale_fill_viridis() +
         strip.text.x = element_blank()) +
   theme(legend.title = element_blank(), legend.position = "top") 
 
-p3 + anno_cat + anno_dog
+p4 <- p3 + anno_cat + anno_dog
+
+p4
 ```
 
 
+```{r, eval=FALSE}
+ggsave(filename="Tidy-Tuesday_2020-07-21.jpg",
+       path=here("2020-07-21_Australian-Pets", "plot"),
+       bg="transparent", 
+       units="in",
+       width=9.5,
+       height=6)
+```
