--- a/2020-07-28_Palmer-Penguins/code/Beltz_Tidy-Tuesday_2020-07-28_Palmer-Penguins.Rmd
+++ b/2020-07-28_Palmer-Penguins/code/Beltz_Tidy-Tuesday_2020-07-28_Palmer-Penguins.Rmd
@@ -19,6 +19,7 @@ library(tidyverse)
 library(tidytuesdayR)
 library(viridis)
 library(patchwork)
+library(ggimage)
 ```
 
 
@@ -44,6 +45,13 @@ head(penguins_CLEAN)
 
 Create map of Antarctica
 
+```{r}
+#load Palmer LTER logo
+palmer_img <- png::readPNG(here("2020-07-28_Palmer-Penguins", "images", "25_year_logo.png"))
+```
+
+
+
 
 If needed, `rnaturalearthhires` is from GitHub repo on 2020-07-27
 
@@ -58,8 +66,8 @@ If needed, `rnaturalearthhires` is from GitHub repo on 2020-07-27
 antarctica_sf <- rnaturalearth::ne_states(country = 'Antarctica', returnclass = 'sf') 
 
 map0 <- ggplot(antarctica_sf) + 
-  geom_sf() + 
-  geom_point(x=-64.05450, y=-64.77417, col="blue", size=3) + #add ppoint for Palmer LTER
+  geom_sf() +
+  geom_point(x=-64.05450, y=-64.77417, size=4, color="blue") + #add point for Palmer LTER
   theme_minimal() +
   theme(panel.grid.major = element_blank(),
        panel.grid.minor = element_blank()) +
@@ -76,10 +84,18 @@ ant_map <- map0
 Create bar graph of samples penguins over time
 
 ```{r}
+#change order of levels 
+penguins_CLEAN$species <- factor(penguins_CLEAN$species, levels=c("Chinstrap","Gentoo","Adelie"))
+
+str(penguins_CLEAN)
+```
+
+
+```{r}
 #chinstrap = pink (#B761C4)
 #gentoo = gray (#347274)
 #adelie = orange (#EF8733)
-peng_colors <- c("#EF8733", "#B761C4", "#347274")
+peng_colors <- c("#B761C4", "#347274", "#EF8733")
 ```
 
 
@@ -119,7 +135,7 @@ p2 <- p1 +
   scale_color_manual(values=peng_colors)
 
 p3 <-p2 +
-  #guides(color="none") +
+  guides(color="none") +
   theme(strip.background = element_blank(),
         strip.text.x = element_blank())
 
@@ -132,6 +148,9 @@ facet_plot
 Load penguin image from @alison_horst
 
 ```{r}
+#Artworkby @allison_horst:
+#https://allisonhorst.github.io/palmerpenguins/articles/art.html
+
 pengart <- png::readPNG(here("2020-07-28_Palmer-Penguins", "images", "penguins.png"))
 
 penguin_img <- ggplot() + 
@@ -182,5 +201,5 @@ ggsave(filename="Tidy-Tuesday_2020-07-28.jpg",
 ```
 
 
-Artwork: https://allisonhorst.github.io/palmerpenguins/articles/art.html
+
 Palmer LTER logo: https://pal.lternet.edu/
